tests/script_errors/heredoc_interpolation_multiline/error.txt
Error: 
    1 | """
    2 | { "
      |   ^ It looks like you forgot to terminate a string with a closing '"'